--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 node_modules
+svelte.config.js
+.nmprc
 
 # Output
 .output
@@ -19,3 +21,4 @@ Thumbs.db
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+vite.config.js
